responsive and alignments fix

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -445,14 +445,20 @@ p {
 }
 
 .membership-section {
-	background: linear-gradient(
-			to right,
-			var(--primary-color) 50%,
-			transparent 50%
-		),
-		url("../images/membership.png") right center/50% 500px no-repeat;
+	position: relative;
+	background: var(--primary-color);
 
 	margin-top: var(--margin-section);
+
+	.member-image {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 50%;
+		object-fit: cover;
+		object-position: top;
+		height: 500px;
+	}
 
 	&__content {
 		background: var(--primary-color);
@@ -1125,14 +1131,23 @@ p {
 		border: 1px solid var(--white-color);
 	}
 
-	.active {
-		border-color: #0072c6;
+	.active-box {
+		width: 26px;
+		height: 26px;
+		border: 2px solid #0072c6; /* outer box */
+		position: relative; /* required for pseudo-element positioning */
 	}
-	.sub-box {
+
+	/* inner sub-box */
+	.active-box::after {
+		content: "";
 		width: 12px;
 		height: 12px;
 		background-color: #0072c6;
-		margin: 4px;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%); /* centers inner box */
 	}
 
 	.grid-links {
@@ -1174,6 +1189,50 @@ p {
 					margin-right: 0.5rem;
 				}
 			}
+		}
+	}
+	/* Alumni Carousel - Vertical Slide */
+	.carousel.top-to-bottom {
+		.carousel-inner {
+			height: 100%;
+		}
+
+		.carousel-item {
+			display: block;
+			position: absolute;
+			width: 100%;
+			transition: transform 0.6s ease-in-out;
+
+			// Hide non-active slides
+			opacity: 0;
+			visibility: hidden;
+
+			&.active,
+			&.carousel-item-next,
+			&.carousel-item-prev {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+
+		.active {
+			position: relative;
+			transform: translateY(0);
+		}
+
+		.carousel-item-next.carousel-item-start,
+		.carousel-item-prev.carousel-item-end {
+			transform: translateY(0);
+		}
+
+		.carousel-item-next,
+		.active.carousel-item-end {
+			transform: translateY(100%);
+		}
+
+		.carousel-item-prev,
+		.active.carousel-item-start {
+			transform: translateY(-100%);
 		}
 	}
 }
